adding content on the html file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,54 @@
     <link rel="stylesheet" href="style.css">
     <title>Landing Page</title>
 </head>
-<body>
-    
+<body class="body">
+    <div class="header">
+        <div>
+            <h1> My logo</h1>
+            <a href="link one">link one</a>
+            <a href="link two">link two</a>
+            <a href="link three">link three</a>
+        </div>
+        <div>
+            <h1>This website is awesome</h1>
+            <p>this website has some subtext that goes here under the main title.It's a smaller font and tle color is lower contrast</p>
+            <button>Sign up</button>
+        </div>
+        <img src="img.jpeg" alt="an image">
+
+    </div>
+    <div class="info">
+        <h2>Some random info</h2>
+        <div>
+            <img src="" alt="">
+            <p>this is some subtext under an illustatiton or image</p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p>this is some subtext under an illustatiton or image</p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p>this is some subtext under an illustatiton or image</p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p>this is some subtext under an illustatiton or image</p>
+        </div>
+    </div>
+    <div class="citation">
+        <p>this is an inspiring quote</p>
+        <p>thor, god of thunder</p>
+    </div>
+    <div class="notification">
+        <div>
+            <h2>call to action !</h2>
+            <p>sign up for our product by cliking that button right over there</p>
+        </div>
+        <button>sign up</button>
+    </div>
+    <div class="footer">
+            <p>copyright the odin project 2021</p>
+    </div>
 </body>
 </html>
