minimal product of the header finish

--- a/index.html
+++ b/index.html
@@ -8,19 +8,23 @@
 </head>
 <body class="body">
     <div class="header">
-        <div>
+        <div class="top-page">
             <h1> My logo</h1>
-            <a href="link one">link one</a>
-            <a href="link two">link two</a>
-            <a href="link three">link three</a>
+            <div class="link">
+                <a href="link one">link one</a>
+                <a href="link two">link two</a>
+                <a href="link three">link three</a>
+            </div>
+            
         </div>
-        <div>
-            <h1>This website is awesome</h1>
-            <p>this website has some subtext that goes here under the main title.It's a smaller font and tle color is lower contrast</p>
-            <button>Sign up</button>
+        <div class="top-page-second">
+            <div >
+                <h1>This website is awesome</h1>
+                <p>this website has some subtext that goes here under the main title.It's a smaller font and tle color is lower contrast</p>
+                <button>Sign up</button>
+            </div>
+            <img src="img.jpeg" alt="an image">
         </div>
-        <img src="img.jpeg" alt="an image">
-
     </div>
     <div class="info">
         <h2>Some random info</h2>
