--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             
         </div>
         <div class="top-page-second">
-            <div >
+            <div id="header-content">
                 <h1>This website is awesome</h1>
                 <p>this website has some subtext that goes here under the main title.It's a smaller font and tle color is lower contrast</p>
                 <button>Sign up</button>
@@ -28,22 +28,25 @@
     </div>
     <div class="info">
         <h2>Some random info</h2>
-        <div>
-            <img src="" alt="">
-            <p>this is some subtext under an illustatiton or image</p>
+        <div class="square">
+            <div>
+                <img src="white square.png" alt="">
+                <p>this is some subtext under an illustatiton or image</p>
+            </div>
+            <div>
+                <img src="white square.png" alt="">
+                <p>this is some subtext under an illustatiton or image</p>
+            </div>
+            <div>
+                <img src="white square.png" alt="">
+                <p>this is some subtext under an illustatiton or image</p>
+            </div>
+            <div>
+                <img src="white square.png" alt="">
+                <p>this is some subtext under an illustatiton or image</p>
+            </div>
         </div>
-        <div>
-            <img src="" alt="">
-            <p>this is some subtext under an illustatiton or image</p>
-        </div>
-        <div>
-            <img src="" alt="">
-            <p>this is some subtext under an illustatiton or image</p>
-        </div>
-        <div>
-            <img src="" alt="">
-            <p>this is some subtext under an illustatiton or image</p>
-        </div>
+        
     </div>
     <div class="citation">
         <p>this is an inspiring quote</p>
