--- a/index.html
+++ b/index.html
@@ -9,58 +9,58 @@
 <body class="body">
     <div class="header">
         <div class="top-page">
-            <h1> My logo</h1>
+            <h1 id="site-name"> My Sport</h1>
             <div class="link">
-                <a href="link one">link one</a>
-                <a href="link two">link two</a>
-                <a href="link three">link three</a>
+                <a href="link one">Purchase</a>
+                <a href="link two">Log in</a>
+                <a href="link three">Sign up</a>
             </div>
             
         </div>
         <div class="top-page-second">
             <div id="header-content">
-                <h1>This website is awesome</h1>
-                <p>this website has some subtext that goes here under the main title.It's a smaller font and tle color is lower contrast</p>
+                <h1>Time to change NOW</h1>
+                <p>Tired of not be able to reach your goal to sucess in sport , we can assure you that with us nothing impossible !</p>
                 <button>Sign up</button>
             </div>
-            <img src="img.jpeg" alt="an image">
+            <img src="/images/header-image.jpg" alt="an image">
         </div>
     </div>
     <div class="info">
-        <h2>Some random info</h2>
+        <h2>About Us</h2>
         <div class="square">
             <div>
-                <img src="white square.png" alt="">
-                <p>this is some subtext under an illustatiton or image</p>
+                <img src="/images/content-image-one.jpg" alt="content-image-one">
+                <p>Weight training for the peole who want to suparse themself</p>
             </div>
             <div>
-                <img src="white square.png" alt="">
-                <p>this is some subtext under an illustatiton or image</p>
+                <img src="/images/content-image-two.jpg" alt="content-image-two">
+                <p>Group training for people who enjoy the power of the group</p>
             </div>
             <div>
-                <img src="white square.png" alt="">
-                <p>this is some subtext under an illustatiton or image</p>
+                <img src="/images/content-image-three.jpg" alt="content-image-three">
+                <p>Fun training for people who enjoy entertaining ativity couple with sport</p>
             </div>
             <div>
-                <img src="white square.png" alt="">
-                <p>this is some subtext under an illustatiton or image</p>
+                <img src="/images/content-image-four.jpg" alt="content-image-four">
+                <p>Track training for the people who love to train outside</p>
             </div>
         </div>
         
     </div>
-    <div class="citation">
-        <p>this is an inspiring quote</p>
-        <p>thor, god of thunder</p>
+    <div class="quote">
+        <p id="text-quote">I'm a dreamer. I have to dream and reach for the stars, and if I miss a star then I grab a handful of clouds.</p>
+        <p id="text-name"> Mike Tyson</p>
     </div>
     <div class="notification">
         <div>
-            <h2>call to action !</h2>
-            <p>sign up for our product by cliking that button right over there</p>
+            <h2>Call to action !</h2>
+            <p>Sign up for our product by cliking that button right over there</p>
         </div>
-        <button>sign up</button>
+        <button>Sign up</button>
     </div>
     <div class="footer">
-            <p>copyright the odin project 2021</p>
+            <p>copyright © CZ 2023</p>
     </div>
 </body>
 </html>
