fix the problem on gitbhub not showing image

--- a/index.html
+++ b/index.html
@@ -23,26 +23,26 @@
                 <p>Tired of not be able to reach your goal to sucess in sport , we can assure you that with us nothing impossible !</p>
                 <button>Sign up</button>
             </div>
-            <img src="./images/header-image.jpg" alt="an image">
+            <img src="images/header-image.jpg" alt="an image">
         </div>
     </div>
     <div class="info">
         <h2>About Us</h2>
         <div class="square">
             <div>
-                <img src="./images/content-image-one.jpg" alt="content-image-one">
+                <img src="images/content-image-one.jpg" alt="content-image-one">
                 <p>Weight training for the peole who want to suparse themself</p>
             </div>
             <div>
-                <img src="./images/content-image-two.jpg" alt="content-image-two">
+                <img src="images/content-image-two.jpg" alt="content-image-two">
                 <p>Group training for people who enjoy the power of the group</p>
             </div>
             <div>
-                <img src="./images/content-image-three.jpg" alt="content-image-three">
+                <img src="images/content-image-three.jpg" alt="content-image-three">
                 <p>Fun training for people who enjoy entertaining ativity couple with sport</p>
             </div>
             <div>
-                <img src="./images/content-image-four.jpg" alt="content-image-four">
+                <img src="images/content-image-four.jpg" alt="content-image-four">
                 <p>Track training for the people who love to train outside</p>
             </div>
         </div>
